# raqote

./: .gitignore  .travis.yml  Cargo.toml  DESIGN.md  README.MD  README.md  README.tpl  release.toml
.github/workflows/: rust.yml
benches/: blend.rs
examples/: capabilities.rs  minifb.rs  pad.rs  stroke-arc.rs  stroke.rs  sweep-gradient.rs  text.rs
src/: blitter.rs  dash.rs  draw_target.rs  geom.rs  lib.rs  main.rs  path_builder.rs  rasterizer.rs  stroke.rs  tests.rs  types.rs
