[package]
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"
name = "raqote"
version = "0.8.1-alpha.0"
description = "2D graphics library"
license = "BSD-3-Clause"
repository = "https://github.com/jrmuizel/raqote"
documentation = "https://docs.rs/raqote"
readme = "README.md"
keywords = ["2d", "graphics"]
categories = ["graphics"]

[dependencies]
euclid = "0.22"
font-kit = { version = "0.9", optional = true }
lyon_geom = "0.16"
pathfinder_geometry = { version = "0.5", optional = true }
png = "0.16"
typed-arena = "2.0"
sw-composite = "0.7.10"

[features]
default = ["text"]
text = ["font-kit", "pathfinder_geometry"]
