[package]
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"
name = "raqote"
version = "0.8.5"
description = "2D graphics library"
license = "BSD-3-Clause"
repository = "https://github.com/jrmuizel/raqote"
documentation = "https://docs.rs/raqote"
readme = "README.md"
keywords = ["2d", "graphics"]
categories = ["graphics"]

[dependencies]
euclid = "0.22"
font-kit = { version = "0.14", optional = true }
lyon_geom = "1.0"
pathfinder_geometry = { version = "0.5", optional = true }
png = { version = "0.17", optional = true }
typed-arena = "2.0"
sw-composite = "0.7.15"

[features]
default = ["text", "png"]
text = ["font-kit", "pathfinder_geometry"]
